--- a/package.json
+++ b/package.json
@@ -1,14 +1,13 @@
 {
-  "name": "goit-react-hw-01-components",
+  "name": "reponame",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://vpoklad.github.io/goit-react-hw-02-phonebook",
+  "homepage": "https://vpoklad.github.io/reponame",
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "gh-pages": "^3.2.3",
-    "modern-normalize": "^1.1.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -43,13 +42,12 @@
     ]
   },
   "devDependencies": {
-    "eslint": "^7.32.0",
     "husky": "^7.0.2",
-    "lint-staged": "^11.1.2",
+    "lint-staged": "^11.2.3",
     "prettier": "^2.4.1"
   },
   "lint-staged": {
-    "*.{js, jsx}": "eslint --cache --fix",
-    "*.{js, jsx, css, md, scss}": "prettier --write"
+    "*.js": "eslint --cache --fix",
+    "*.{js,css,md}": "prettier --write"
   }
 }
